Chatbot UI Commit